AM_CFLAGS = -Wall -I$(top_srcdir)/include

LDADD = $(top_builddir)/libueioa/libueioa.la

TESTS = \
schedule_system_output \
bad_order \
self_created \
child_created \
bad_descriptor \
declared \
output_dne \
input_dne \
output_unavailable \
input_unavailable \
composed \
input_composed \
output_composed \
not_composed \
decomposed \
input_decomposed \
output_decomposed \
rescinded \
automaton_dne \
not_owner \
child_destroyed \
schedule_alarm_input \
schedule_read_input \
schedule_write_input \
schedule_free_input \
schedule_output \
schedule_internal \
same_compose \
compose_param_input

check_PROGRAMS = $(TESTS)

schedule_system_output_SOURCES = schedule_system_output.c

bad_order_SOURCES = bad_order.c

self_created_SOURCES = self_created.c

child_created_SOURCES = child_created.c

bad_descriptor_SOURCES = bad_descriptor.c

declared_SOURCES = declared.c

output_dne_SOURCES = output_dne.c

input_dne_SOURCES = input_dne.c

output_unavailable_SOURCES = output_unavailable.c

input_unavailable_SOURCES = input_unavailable.c

composed_SOURCES = composed.c

input_composed_SOURCES = input_composed.c

output_composed_SOURCES = output_composed.c

not_composed_SOURCES = not_composed.c

decomposed_SOURCES = decomposed.c

input_decomposed_SOURCES = input_decomposed.c

output_decomposed_SOURCES = output_decomposed.c

rescinded_SOURCES = rescinded.c

automaton_dne_SOURCES = automaton_dne.c

not_owner_SOURCES = not_owner.c

child_destroyed_SOURCES = child_destroyed.c

schedule_alarm_input_SOURCES = schedule_alarm_input.c

schedule_read_input_SOURCES = schedule_read_input.c

schedule_write_input_SOURCES = schedule_write_input.c

schedule_free_input_SOURCES = schedule_free_input.c

schedule_output_SOURCES = schedule_output.c

schedule_internal_SOURCES = schedule_internal.c

same_compose_SOURCES = same_compose.c

compose_param_input_SOURCES = compose_param_input.c
