AM_CXXFLAGS = -Wall -I$(top_srcdir)/include

LDADD = $(top_builddir)/libueioa/libueioa.la

TESTS = \
schedule_system_output
# bad_order \
# self_created \
# child_created \
# bad_descriptor \
# declared \
# output_dne \
# input_dne \
# output_unavailable \
# input_unavailable \
# composed \
# input_composed \
# output_composed \
# not_composed \
# decomposed \
# input_decomposed \
# output_decomposed \
# rescinded \
# automaton_dne \
# not_owner \
# child_destroyed \
# schedule_alarm_input \
# schedule_read_input \
# schedule_write_input \
# schedule_free_input \
# schedule_output \
# schedule_internal \
# same_compose \
# compose_param_input

check_PROGRAMS = $(TESTS)

schedule_system_output_SOURCES = schedule_system_output.cc

# bad_order_SOURCES = bad_order.cc

# self_created_SOURCES = self_created.cc

# child_created_SOURCES = child_created.cc

# bad_descriptor_SOURCES = bad_descriptor.cc

# declared_SOURCES = declared.cc

# output_dne_SOURCES = output_dne.cc

# input_dne_SOURCES = input_dne.cc

# output_unavailable_SOURCES = output_unavailable.cc

# input_unavailable_SOURCES = input_unavailable.cc

# composed_SOURCES = composed.cc

# input_composed_SOURCES = input_composed.cc

# output_composed_SOURCES = output_composed.cc

# not_composed_SOURCES = not_composed.cc

# decomposed_SOURCES = decomposed.cc

# input_decomposed_SOURCES = input_decomposed.cc

# output_decomposed_SOURCES = output_decomposed.cc

# rescinded_SOURCES = rescinded.cc

# automaton_dne_SOURCES = automaton_dne.cc

# not_owner_SOURCES = not_owner.cc

# child_destroyed_SOURCES = child_destroyed.cc

# schedule_alarm_input_SOURCES = schedule_alarm_input.cc

# schedule_read_input_SOURCES = schedule_read_input.cc

# schedule_write_input_SOURCES = schedule_write_input.cc

# schedule_free_input_SOURCES = schedule_free_input.cc

# schedule_output_SOURCES = schedule_output.cc

# schedule_internal_SOURCES = schedule_internal.cc

# same_compose_SOURCES = same_compose.cc

# compose_param_input_SOURCES = compose_param_input.cc
