AM_CXXFLAGS = -Wall -I$(top_srcdir)/include

LDADD = $(top_builddir)/lib/libioa.la

noinst_PROGRAMS = \
count_to_ten_automaton \
null_automaton \
two_counters

count_to_ten_automaton_SOURCES = count_to_ten_automaton.cpp

null_automaton_SOURCES = null_automaton.cpp

two_counters_SOURCES = two_counters.cpp