AM_CXXFLAGS = -Wall -I$(top_srcdir)/include

LDADD = $(top_builddir)/libautoman/libautoman.la

TESTS = \
automan_creat \
automan_create
# automan_declare \
# automan_output_dne \
# automan_input_dne \
# automan_output_unavailable \
# automan_input_unavailable \
# automan_compose \
# automan_compose_out_param \
# automan_compose_in_param \
# automan_decompose \
# automan_rescind \
# automan_destroy \
# automan_self_destruct \
# automan_create_destroy \
# automan_input_add \
# automan_input_add2 \
# automan_output_add \
# automan_output_add2 \
# automan_external_destroy \
# automan_external_decompose \
# automan_proxy_add \
# automan_proxy_not_created \
# automan_proxy_destroyed

check_PROGRAMS = $(TESTS)

automan_creat_SOURCES = automan_creat.cc

automan_create_SOURCES = automan_create.cc

# automan_declare_SOURCES = automan_declare.cc

# automan_output_dne_SOURCES = automan_output_dne.cc

# automan_input_dne_SOURCES = automan_input_dne.cc

# automan_output_unavailable_SOURCES = automan_output_unavailable.cc

# automan_input_unavailable_SOURCES = automan_input_unavailable.cc

# automan_compose_SOURCES = automan_compose.cc

# automan_compose_in_param_SOURCES = automan_compose_in_param.cc

# automan_compose_out_param_SOURCES = automan_compose_out_param.cc

# automan_decompose_SOURCES = automan_decompose.cc

# automan_rescind_SOURCES = automan_rescind.cc

# automan_destroy_SOURCES = automan_destroy.cc

# automan_self_destruct_SOURCES = automan_self_destruct.cc

# automan_create_destroy_SOURCES = automan_create_destroy.cc

# automan_input_add_SOURCES = automan_input_add.cc

# automan_input_add2_SOURCES = automan_input_add2.cc

# automan_output_add_SOURCES = automan_output_add.cc

# automan_output_add2_SOURCES = automan_output_add2.cc

# automan_external_destroy_SOURCES = automan_external_destroy.cc

# automan_external_decompose_SOURCES = automan_external_decompose.cc

# automan_proxy_add_SOURCES = automan_proxy_add.cc

# automan_proxy_not_created_SOURCES = automan_proxy_not_created.cc

# automan_proxy_destroyed_SOURCES = automan_proxy_destroyed.cc
